--- a/lion.html
+++ b/lion.html
@@ -1,45 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Lion | Shoaib's zoo</title>
-    <link rel="stylesheet" href="css/index.css" />
-  </head>
-  <body>
-    <h1>🐾 Lion</h1>
-    <nav>
-      <a href="index.html">Home</a> |
-      <a href="polar-bear.html">Polar Bear</a> |
-      <a href="lion.html">Lion</a> |
-      <a href="tiger.html">Tiger</a> |
-      <a href="penguin.html">Penguin</a>
-    </nav>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Lion | Shoaib's Zoo</title>
+  <link rel="stylesheet" href="css/index.css" />
+</head>
+<body>
+  <h1>🐾 Lion</h1>
 
-    <figure>
-      <img src="img/lion.jpg" alt="Lion resting in the savannah">
-      <figcaption>King of the Jungle</figcaption>
-    </figure>
+  <nav aria-label="Primary">
+    <a href="index.html">Home</a> |
+    <a href="polar-bear.html">Polar Bear</a> |
+    <strong>Lion</strong> |
+    <a href="tiger.html">Tiger</a> |
+    <a href="penguin.html">Penguin</a>
+  </nav>
 
-    <section>
-        <h2>About the Lion</h2>
-        <p>
-          Lions are large carnivorous cats native to Africa and a small population in India.
-          They are social, living in groups called prides, and are known for their loud roars
-          and distinctive manes (in males). Lions typically inhabit grasslands and open
-          woodlands where prey such as zebra and antelope are common.
-        </p>
-        <p>
-          Females usually hunt cooperatively, while males defend the pride’s territory.
-          Although often called “king of the jungle,” lions actually prefer open habitats.
-          Conservation concerns include habitat loss and conflict with humans; several
-          populations are considered vulnerable.
-        </p>
-      </section>
-    </main>
+  <figure>
+    <img src="img/lion.jpg" alt="Lion resting in the savannah" />
+    <figcaption>“King of the Jungle” (really the savannah). Lions are social big cats that live in groups called prides.</figcaption>
+  </figure>
 
-    <footer>
-      <p><a href="index.html">Back to Home</a></p>
-    </footer>
-  </body>
+  <h2>About the Lion</h2>
+  <p>
+    Lions (<em>Panthera leo</em>) are the only truly social big cats, living in prides typically made up of related females, their cubs, and a coalition of males.
+    Lionesses usually hunt cooperatively while males defend territory. They are carnivores found mostly in African savannahs and grasslands.
+  </p>
+
+  <h2>Fast facts</h2>
+  <ul>
+    <li>Average male weight: 150–250 kg; female: 120–182 kg</li>
+    <li>Roar can be heard up to 8 km (5 miles)</li>
+    <li>Lifespan: ~10–14 years in the wild</li>
+  </ul>
+</body>
 </html>
 
