Revert "Update polar-bear page structure and styling"
This reverts commit c6997986ba291a1aa41fe088044bc6587d11697e.

--- a/polar-bear.html
+++ b/polar-bear.html
@@ -1,34 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Polar Bear | Shoaib's Zoo</title>
-  <!-- keep using your existing page CSS -->
-  <link rel="stylesheet" href="css/polar-bear.css" />
-</head>
-<body>
-  <h1>🐾 Polar Bear</h1>
-
-  <nav aria-label="Primary">
-    <a href="index.html">Home</a> |
-    <strong>Polar Bear</strong> |
-    <a href="lion.html">Lion</a> |
-    <a href="tiger.html">Tiger</a> |
-    <a href="penguin.html">Penguin</a>
-  </nav>
-
-  <figure>
-    <img src="img/polar-bear.gif" alt="Polar bear walking on Arctic ice" />
-    <figcaption>Polar bears are powerful swimmers built for life on sea ice.</figcaption>
-  </figure>
-
-  <h2>About the Polar Bear</h2>
-  <p>
-    The polar bear is a hypercarnivorous bear whose native range lies largely within the Arctic Circle, 
-    encompassing the Arctic Ocean, its surrounding seas and surrounding land masses. 
-    It is the largest extant bear species, as well as the largest extant land carnivore.
-  </p>
-</body>
+<html>
+  <head>
+    <title>Johnny's Zoo - Polar Bear</title>
+    <link rel="stylesheet" type="text/css" href="css/polar-bear.css">
+  </head>
+  <body>
+    <h1>Polar Bear</h1>
+    <img src="img/polar-bear.gif" alt="polar bear">
+    <p>
+      The polar bear is a hypercarnivorous bear whose native range lies largely within the Arctic Circle, 
+      encompassing the Arctic Ocean, its surrounding seas and surrounding land masses. 
+      It is the largest extant bear species, as well as the largest extant land carnivore.
+    </p>
+  </body>
 </html>
-
