Update Polar Bear page (content + styling)

--- a/polar-bear.html
+++ b/polar-bear.html
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Johnny's Zoo - Polar Bear</title>
-    <link rel="stylesheet" type="text/css" href="css/polar-bear.css">
-  </head>
-  <body>
-    <h1>Polar Bear</h1>
-    <img src="img/polar-bear.gif" alt="polar bear">
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Polar Bear | Shoaib's Zoo</title>
+  <link rel="stylesheet" href="css/index.css" />
+</head>
+<body>
+  <h1>🐾 Polar Bear</h1>
+
+  <nav aria-label="Primary">
+    <a href="index.html">Home</a> |
+    <strong>Polar Bear</strong> |
+    <a href="lion.html">Lion</a> |
+    <a href="tiger.html">Tiger</a> |
+    <a href="penguin.html">Penguin</a>
+  </nav>
+
+  <figure>
+    <!-- use your real image filename (jpg/png/gif) -->
+    <img src="img/polar-bear.jpg" alt="Polar bear walking on sea ice" />
+    <figcaption>Polar bears depend on sea ice to hunt seals and travel long distances.</figcaption>
+  </figure>
+
+  <section>
+    <h2>About the Polar Bear</h2>
     <p>
-      The polar bear is a hypercarnivorous bear whose native range lies largely within the Arctic Circle, 
-      encompassing the Arctic Ocean, its surrounding seas and surrounding land masses. 
-      It is the largest extant bear species, as well as the largest extant land carnivore.
+      Polar bears (<em>Ursus maritimus</em>) live across the Arctic region and are superbly adapted to cold:
+      thick fur, a layer of insulating fat, and large paws for swimming and walking on ice. They are
+      top predators that primarily hunt seals at breathing holes or from the ice edge.
     </p>
-  </body>
+    <p>
+      As sea ice changes seasonally, polar bears travel great distances. Scientists monitor populations
+      closely due to habitat loss and shifts in ice coverage. Humans can reduce impacts by limiting
+      greenhouse gas emissions and protecting Arctic ecosystems.
+    </p>
+  </section>
+
+  <footer>
+    <p><a href="index.html">Back to Home</a></p>
+  </footer>
+</body>
 </html>
