--- a/polar-bear.html
+++ b/polar-bear.html
@@ -19,7 +19,7 @@
 
   <figure>
     <!-- use your real image filename (jpg/png/gif) -->
-    <img src="img/polar-bear.jpg" alt="Polar bear walking on sea ice" />
+    <img src="img/polar-bear.gif" alt="Polar bear walking on sea ice" />
     <figcaption>Polar bears depend on sea ice to hunt seals and travel long distances.</figcaption>
   </figure>
 
