--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Shoaib's Zoo</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-  </head>
-  <body>
-    <h1>Welcome to Shoaib's Zoo</h1>
-    <h3>See the animals at the zoo:</h3>
-    <div class="link">
-      <a href="polar-bear.html">Polar Bear</a>
-    </div>
-<div class="link">
-  <a href="lion.html">Lion</a>
-</div>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Shoaib's Zoo</title>
+  <link rel="stylesheet" href="css/index.css" />
+</head>
+<body>
+  <h1>Welcome to Shoaib's Zoo 🐾</h1>
+
+  <p>Explore the animals at our zoo:</p>
+
+  <nav aria-label="Main navigation">
+    <a href="polar-bear.html">Polar Bear</a> |
+    <a href="lion.html">Lion</a> |
+    <a href="tiger.html">Tiger</a> |
+    <a href="penguin.html">Penguin</a>
+  </nav>
+
+  <footer>
+    <p>&copy; 2025 Shoaib's Zoo</p>
+  </footer>
+</body>
 </html>
