--- a/lion.html
+++ b/lion.html
@@ -43,5 +43,9 @@
     <li>Roar can be heard up to 8 km (5 miles)</li>
     <li>Lifespan: ~10–14 years in the wild</li>
   </ul>
+
+  <footer>
+    <p><a href="index.html">Back to Home</a></p>
+  </footer>
 </body>
 </html>
