--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
   <p>Explore the animals at our zoo:</p>
 
-  <nav aria-label="Main navigation">
-    <a href="polar-bear.html">Polar Bear</a> |
-    <a href="lion.html">Lion</a> |
-    <a href="tiger.html">Tiger</a> |
-    <a href="penguin.html">Penguin</a>
-  </nav>
+<nav aria-label="Primary">
+  <a href="index.html">Home</a> |
+  <a href="polar-bear.html">Polar Bear</a> |
+  <a href="lion.html">Lion</a> |
+  <a href="tiger.html">Tiger</a> |
+  <a href="penguin.html">Penguin</a>
+</nav>
 
   <footer>
     <p>&copy; 2025 Shoaib's Zoo</p>
